--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,13 @@ body {
     padding: 2.5%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    padding: 2.5% auto;
+.content-area > *:not(:last-child) {
+    /* padding-top: 10px; */
+    padding-bottom: 25px;
+}
+
+.content-area h1, h2, h3, h4, h5, h6 {
+    padding-bottom: 15px;
 }
 
 .final-result {
@@ -30,4 +35,12 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 2.5%;
     /* width: auto;
     height: auto; */
+}
+
+h2 {
+    font-size: 1.17rem;
+}
+
+h3 {
+    font-size: 1.5rem;
 }
