--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: Arial, sans-serif; /* Set a global font-family */
 }
 
@@ -13,28 +14,25 @@ body {
 
 .content-area {
     background-color: white;
-    width: 50%;
-    margin: 5% auto;
-    border-radius: 20px;
+    width: 50vw;
+    margin: 5vh auto;
+    border-radius: 1vw;
     padding: 2.5%;
 }
 
 .content-area > *:not(:last-child) {
-    /* padding-top: 10px; */
-    padding-bottom: 25px;
+    margin-bottom: 25px;
 }
 
 .content-area h1, h2, h3, h4, h5, h6 {
-    padding-bottom: 15px;
+    margin-bottom: 15px;
 }
 
-.final-result {
+#final-result {
     object-fit: contain;
     width: 100%;
     height: 100%;
-    margin-bottom: 2.5%;
-    /* width: auto;
-    height: auto; */
+    border-radius: 1vw;
 }
 
 h2 {
@@ -43,4 +41,12 @@ h2 {
 
 h3 {
     font-size: 1.5rem;
+}
+
+li:not(:last-child) {
+    margin-bottom: 5px; /* Adds spacing between list items except the last one */
+}
+
+.bold {
+    font-weight: bold;
 }
