--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 .content-area > *:not(:last-child) {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .content-area h1, h2, h3, h4, h5, h6 {
@@ -75,3 +75,9 @@ li::marker {
 ol>li::marker {
     margin: 5px;
 }
+
+hr {
+    border: 0.5px solid rgb(221, 221, 221);
+    width: 100%;
+}
+
