--- a/styles.css
+++ b/styles.css
@@ -81,28 +81,25 @@ hr {
     width: 100%;
 }
 
+.nutrition {
+    width: 100%;
+}
+
 .nutrition > p {
     margin-bottom: 20px;
 }
 
+
 .nutrition-table {
     border-collapse: collapse;
+    width: 100%;
 }
 
 .nutrition-table tr:not(:last-child) {
     border-bottom: 1px solid #ddd;
 }
 
-.nutrition-table td {
-    padding: 10px;
-}
-
 .nutrition-table .value {
     font-weight: bold;
-    padding-left: 150%;
     color: #8B4513; /* Brown color */
-}
-
-.nutrition-table .type {
-    padding-left: 25px; /* Brown color */
 }
