--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     object-fit: contain;
     width: 100%;
     height: 100%;
-    border-radius: 1vw;
+    border-radius: 15px;
 }
 
 h2 {
@@ -57,8 +57,8 @@ li:not(:last-child) {
 }
 
 .prep-time {
-    padding: 1.5vw;
-    border-radius: 1vw;
+    padding: 20px;
+    border-radius: 15px;
     background-color: rgb(255, 238, 255);
 }
 
@@ -68,7 +68,7 @@ li:not(:last-child) {
 
 ul, ol {
     list-style-position: outside;
-    padding-left: 2.5%;
+    padding-left: 1em;
 }
 
 li::marker {
@@ -108,4 +108,19 @@ hr {
 .nutrition-table .value {
     font-weight: bold;
     color: #8B4513; /* Brown color */
+}
+
+
+@media (max-width: 768px) {
+    .content-area {
+        /* background-color: white; */
+        width: 100vw;
+        margin: 0;
+        border-radius: 1vw;
+        padding: 5%; */
+    }
+}
+
+.content-area h3 {
+    color: rgb(190, 99, 24);
 }
