--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ hr {
         width: 100vw;
         margin: 0;
         border-radius: 1vw;
-        padding: 5%; */
+        padding: 5%;
     }
 }
 
